<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="327dp"
        android:layout_height="580dp"
        android:layout_marginBottom="270dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/login" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/correo_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/correo_usuario"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_marginBottom="50dp"
        android:hint="@string/contra"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="206dp"
        android:layout_height="54dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#9C27B0"
        android:text="@string/btn_login"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_registrar_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_registrar_usuario"
        android:layout_width="206dp"
        android:layout_height="54dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/btn_registro"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>